fix style of search on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,15 @@ display: flex;
     .dl-btn {
         margin: 0 auto;
     }
+
+    .filter-options {
+        display: none;
+    }
+    .search-filter-input {
+        width: 100%;
+        height: 40px;
+        text-align: center;
+    }
 }
 
 .header-button {
